--- a/src/app/modules/seller/seller-product/create-product/variant/variant.component.scss
+++ b/src/app/modules/seller/seller-product/create-product/variant/variant.component.scss
@@ -1,6 +1,7 @@
 .variant-absolute-container {
   width: 100%;
-  max-width: 1120px;
+  max-width: 70rem;
+  margin-inline: auto;
 }
 
 .stage0-container,
